# Launchpad-CLI

./: .gitignore  ARCHITECTURE.md  README.md  hello.py  pyproject.toml
.ai/: INSTALL.md  README.md  git-rules.md  plan.md
.ai/plans/: 01-foundation.md  02-submission-pipeline.md  03-monitoring-logs.md  04-download-cleanup.md  05-performance-polish.md  07-terminal-experience.md  08-task-references-and-solver-aware-logs.md  09-cli-visual-overhaul.md  10-cluster-env-and-live-metrics.md  11-progress-and-ui-sweep.md  11-transfer-progress-indicators.md  LAUNCHPAD_UI_REDESIGN_PLAN.md  LAUNCHPAD_UI_REVISION.md  _template-phase-plan.md
.ai/reviews/: 1.1.md  1.2.md  1.3.md  1.4.md  10.1.md  11.1.md  11.2.md  2.1.md  2.2.md  2.3.md  3.1.md  3.2.md  3.3.md  4.1.md  4.2.md  4.3.md  5.1.md  5.2.md  5.3.md  7.1.md  7.2.md  7.3.md  7.4.md  8.1.md  8.2.md  8.3.md  8.4.md  8.5.md  8.6.md  8.7.md  8.8.md  9.1.md  9.2.md  9.3.md  9.4.md  9.5.md  9.6.md  9.7.md  _template-review.md
.ai/roles/: builder.md  coordinator.md
.ai/sessions/: 2026-03-12-1525-coordinator-initialize-phase-1.md  2026-03-12-1538-builder-1.1-project-scaffolding.md  2026-03-12-1546-coordinator-review-1.1-and-assign-1.2.md  (+137 more)
docs/: README.md  transfer-benchmark.md
tests/: conftest.py  test_cancel.py  test_cleanup.py  test_cli.py  test_compress.py  test_config.py  test_display.py  test_download.py  test_local_ops.py  test_logs.py  test_ls.py  test_operator_commands.py  test_project_scaffold.py  test_remote_ops.py  test_slurm.py  test_solver_adapters.py  test_ssh.py  test_status.py  test_submit.py  test_transfer.py
(+94 files in other folders)
