[project]
name = "launchpad-cli"
version = "0.1.0"
description = "Windows-first CLI for SLURM solver submission and retrieval workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncssh>=2.14",
    "click>=8.1",
    "loguru>=0.7",
    "pydantic>=2.0",
    "questionary>=2.0",
    "rich>=13.0",
    "rich-click>=1.7",
    "zstandard>=0.22",
]

[project.scripts]
launchpad = "launchpad_cli.cli:main"
lp = "launchpad_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/launchpad_cli"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
